# monlay

./: LICENSE  README.md  install.sh  pyproject.toml
config/: example-config.yaml
data/: com.github.monlay.desktop
src/monlay/: cli.py  config.py  configurator.py  daemon.py  dbus_client.py  logging_config.py  models.py  postconfig.py
src/monlay/gui/: app.py  monitor_canvas.py  profile_editor.py  window.py
systemd/: monlay.service
